--- a/work-experience.html
+++ b/work-experience.html
@@ -95,10 +95,10 @@
 <canvas id="bouncing-ball-canvas"></canvas>
   <nav>
     <ul>
-      <li><a href="p1.html#home">Home</a></li>
-      <li><a href="p1.html#about">About</a></li>
+      <li><a href="index.html#home">Home</a></li>
+      <li><a href="index.html#about">About</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <li><a href="p1.html#publications-section">Publications</a></li>
+      <li><a href="index.html#publications-section">Publications</a></li>
       <li><a href="work-experience.html">Experience</a></li>
       <li><a href="certifications.html">Certifications</a></li>
     </ul>
