--- a/projects.html
+++ b/projects.html
@@ -80,10 +80,10 @@
   <!-- Navigation -->
   <nav>
     <ul>
-      <li><a href="p1.html">Home</a></li>
-      <li><a href="p1.html#about">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html#about">About</a></li>
       <li><a href="#save-model" class="active">Projects</a></li>
-      <li><a href="p1.html#publications-section">Publications</a></li>
+      <li><a href="index.html#publications-section">Publications</a></li>
       <li><a href="work-experience.html#experience">Experience</a></li>
       <li><a href="certifications.html">Certifications</a></li>
     </ul>
