--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@ nav a.active {
   <!-- About Section -->
   <section class="about-section">
     <div class="about-img">
-      <img src="E:\CV REQUIREMENTS\portfolio\IMG_20250529_174547757_HDR.jpg" alt="Gargi Ghosh" />
+      <img src="IMG_20250529_174547757_HDR.jpg" alt="Gargi Ghosh" />
     </div>
     <div class="about-content">
       <h2>About Me</h2>
