--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5022936" target="_blank">Read Full Paper</a>
         </div>
         <div class="slide-right">
-          <img src="E:\CV REQUIREMENTS\portfolio\Screenshot 2025-06-08 175059.png" alt="Paper 2 Preview" />
+          <img src="Screenshot 2025-06-08 175059.png" alt="Paper 2 Preview" />
         </div>
       </div>
     </div>
