--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <a href="https://ieeexplore.ieee.org/document/10441664" target="_blank">Read Full Paper</a>
         </div>
         <div class="slide-right">
-          <img src="E:\CV REQUIREMENTS\portfolio\10441664-fig-11-source-large.gif" alt="Paper 1 Preview" />
+          <img src="10441664-fig-11-source-large.gif" alt="Paper 1 Preview" />
         </div>
       </div>
     </div>
