--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <a href="https://ieeexplore.ieee.org/document/10441664" target="_blank">Read Full Paper</a>
         </div>
         <div class="slide-right">
-          <img src="10441664-fig-11-source-large.gif" alt="Paper 1 Preview" />
+          <img src="10441664-fig-11-source-large.gif" />
         </div>
       </div>
     </div>
@@ -209,7 +209,7 @@
           <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5022936" target="_blank">Read Full Paper</a>
         </div>
         <div class="slide-right">
-          <img src="Screenshot 2025-06-08 175059.png" alt="Paper 2 Preview" />
+          <img src="Screenshot 2025-06-08 175059.png" />
         </div>
       </div>
     </div>
