--- a/certifications.html
+++ b/certifications.html
@@ -117,8 +117,8 @@ nav a.active {
 <canvas id="bouncing-ball-canvas"></canvas>
   <nav>
     <ul>
-      <li><a href="p1.html#home">Home</a></li>
-      <li><a href="p1.html#about">About</a></li>
+      <li><a href="index.html#home">Home</a></li>
+      <li><a href="index.html#about">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="work-experience.html">Experience</a></li>
       <li><a href="certifications.html">Certifications</a></li>
