--- a/certifications.html
+++ b/certifications.html
@@ -117,7 +117,7 @@ nav a.active {
 <canvas id="bouncing-ball-canvas"></canvas>
   <nav>
     <ul>
-      <li><a href="index.html#home">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="index.html#about">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="work-experience.html">Experience</a></li>
