--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
       <p>Designed and implemented multiple ML models for medical image classification tasks, specifically focusing on endoscopy and colonoscopy datasets.</p>
     </div>
     <div class="project-card" onclick="location.href='projects.html#photography'">
-      <h3> Lung and Colon Cancer Detection</h3>
+      <h3> Autonomous Research Assistant</h3>
       <p>Developed a deep learning model for the early detection of lung and colon cancer using medical imaging techniques. The model achieved high accuracy in identifying cancerous lesions, aiding radiologists in diagnosis.</p>
     </div>
     <div class="project-card" onclick="location.href='projects.html#chatbot'">
-      <h3>Apple Watch and Fitbit Data Processing and Prediction</h3>
+      <h3>NeuroV - Used to detect brain tumor's</h3>
       <p>Developed a predictive model for Apple Watch and Fitbit data to forecast user health trends and activity levels.</p>
     </div>
     <div class="project-card" onclick="location.href='projects.html#ai-films'">
-      <h3>Warranty Claims Fraud Prediction</h3>
+      <h3>EEG </h3>
       <p>Developed a machine learning model to predict fraudulent warranty claims, improving the accuracy of claims processing.</p>
     </div>
   </div>
