--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <div class="project-card" onclick="location.href='projects.html#photography'">
       <h3> Autonomous Research Assistant</h3>
-      <p>Developed a deep learning model for the early detection of lung and colon cancer using medical imaging techniques. The model achieved high accuracy in identifying cancerous lesions, aiding radiologists in diagnosis.</p>
+      <p>Designed to help researchers extract, search, and interact with large volumes of academic literature — with a Streamlit interface for natural question-answering.</p>
     </div>
     <div class="project-card" onclick="location.href='projects.html#chatbot'">
       <h3>NeuroV - Used to detect brain tumor's</h3>
