--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
     <div class="project-card" onclick="location.href='projects.html#chatbot'">
       <h3>NeuroV - Used to detect brain tumor's</h3>
-      <p>Developed a predictive model for Apple Watch and Fitbit data to forecast user health trends and activity levels.</p>
+      <p>NeuroV is a deep learning-based web application that detects the presence of brain tumors from MRI scans. </p>
     </div>
     <div class="project-card" onclick="location.href='projects.html#ai-films'">
       <h3>EEG </h3>
