--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       <p>NeuroV is a deep learning-based web application that detects the presence of brain tumors from MRI scans. </p>
     </div>
     <div class="project-card" onclick="location.href='projects.html#ai-films'">
-      <h3>EEG </h3>
-      <p>Developed a machine learning model to predict fraudulent warranty claims, improving the accuracy of claims processing.</p>
+      <h3> Implementation of CNN, ANN, LSTM and SNN on the EEG Brainwave dataset </h3>
+      <p> Used different Machine Learning models on the different Neural Networks.</p>
     </div>
   </div>
 </section>
