--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
   </section>
 
   <section class="project-detail" id="photography">
-    <h2> Lung and Colon Cancer Detection</h2>
+    <h2> Autonomous Research Assistant</h2>
     <p>Developed a deep learning model for the early detection of lung and colon cancer using medical imaging techniques. The model achieved high accuracy in identifying cancerous lesions, aiding radiologists in diagnosis. Tensorflow library has been used for implementing deep learning model. The model was successfully evaluated and the accuracy was found to be 97 percent.</p>
   </section>
 
