--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
 
   <section class="project-detail" id="photography">
     <h2> Autonomous Research Assistant</h2>
-    <p>Developed a deep learning model for the early detection of lung and colon cancer using medical imaging techniques. The model achieved high accuracy in identifying cancerous lesions, aiding radiologists in diagnosis. Tensorflow library has been used for implementing deep learning model. The model was successfully evaluated and the accuracy was found to be 97 percent.</p>
+    <p>A fully local, AI-powered research assistant built using PDF parsing, chunking, semantic embedding with sentence-transformers, and vector search using ChromaDB. Designed to help researchers extract, search, and interact with large volumes of academic literature — with a Streamlit interface for natural question-answering.</p>
   </section>
 
   <section class="project-detail" id="chatbot">
