--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
   </section>
 
   <section class="project-detail" id="chatbot">
-    <h2>Apple Watch and Fitbit Data Processing and Prediction</h2>
+    <h2>NeuroV</h2>
     <p> Data Processing was done by using pandas and numpy libraries. Models were built using the sklearn library. For data visualization seaborn and matplotlib libraries was used to create heatmaps, histplots. The accuracy predicted was 88 percent.</p>
   </section>
 
