--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,9 @@
 
   <section class="project-detail" id="chatbot">
     <h2>NeuroV</h2>
-    <p> Data Processing was done by using pandas and numpy libraries. Models were built using the sklearn library. For data visualization seaborn and matplotlib libraries was used to create heatmaps, histplots. The accuracy predicted was 88 percent.</p>
+    <p> NeuroV is a deep learning-based web application that detects the presence of brain tumors from MRI scans in .nii or .nii.gz format. The system is built with Flask for the web backend and PyTorch for the inference engine, and provides slice-level confidence visualization using Chart.js.
+
+</p>
   </section>
 
   <section class="project-detail" id="ai-films">
