--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
   </section>
 
   <section class="project-detail" id="ai-films">
-    <h2>Warranty Claims Fraud Prediction</h2>
+    <h2>Implementation of CNN, ANN, LSTM and SNN on the EEG Brainwave dataset</h2>
     <p>Developed a machine learning model to predict fraudulent warranty claims, improving the accuracy of claims processing. Accuracy was calculated under different classifiers such as Decision Tree, Random Forest, and Logistic Regression and was found to be 92 percent.</p>
   </section>
 
