--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
 
   <section class="project-detail" id="ai-films">
     <h2>Implementation of CNN, ANN, LSTM and SNN on the EEG Brainwave dataset</h2>
-    <p>Developed a machine learning model to predict fraudulent warranty claims, improving the accuracy of claims processing. Accuracy was calculated under different classifiers such as Decision Tree, Random Forest, and Logistic Regression and was found to be 92 percent.</p>
+    <p>Dataset EEG data (e.g., BCI Competition Dataset, DEAP, or synthetic EEG signals)</p>
   </section>
 
   <section class="project-detail" id="more-projects">
